[package]
name = "qg-desktop"
version = "0.1.0"
description = "QuantumGuard Polyglot Sentinel Desktop Shell"
authors = ["Antigravity"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open", "system-tray"] }

[features]
# default enables signaling the frontend to use the bundled server
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
